--- a/varadhanEnTa.css
+++ b/varadhanEnTa.css
@@ -7,6 +7,7 @@ body {
     padding: 20px;
     font-family: 'Arial', sans-serif;
     background: #001122;
+    background: #660066;;
     color: #333;
     text-align: center;
 }
